crates/musli/tests/ui/tag_content_on_enum_error.stderr
error: The #[musli(tag)] and #[musli(content)] attributes are only supported on enums
 --> tests/ui/tag_content_on_enum_error.rs:4:15
  |
4 | #[musli(tag = "type")]
  |               ^^^^^^

error: The #[musli(tag)] and #[musli(content)] attributes are only supported on enums
 --> tests/ui/tag_content_on_enum_error.rs:8:19
  |
8 | #[musli(content = "type")]
  |                   ^^^^^^
